--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -10,7 +10,7 @@ import arrowDownRightWhite from '../assets/images/arrow-down-right-white.svg';
 
 
 <Layout title="Contact">
-	<Header textColor="black" headerClasses="bg-white"/>
+	<Header textColor="black" headerClasses="bg-white" menuColor="#000000"/>
 	<main class="h-screen">
 		<ContactForm />
 	</main>
