--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -13,7 +13,7 @@ import arrowDownRightWhite from '../assets/images/arrow-down-right-white.svg';
 
 
 <Layout title="Welcome to Piergorelli.com">
-	<Header textColor="black" headerClasses=""/>
+	<Header textColor="black" headerClasses="" menuColor="#000000"/>
 	<main class="h-screen">
 
 	</main>
