--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -41,11 +41,11 @@ const services: ServiceItem[] = [
             const IconComponent = iconMap[item.icon] || null;
             return (
             <div class="py-14 border-b first:border-t">
-              <div class="grid lg:grid-cols-4">
-                <span class="text-3xl font-semibold">{(index + 1).toString().padStart(2,'0')}.</span>
-                <h3 class="text-3xl font-semibold" set:html={item.title} />
-                <p class="text-xl text-boulder-500">{ item.body }</p>
-                <div class="flex justify-end text-end">
+              <div class="grid grid-cols-[1fr_5fr_2fr] grid-rows-[auto_auto_auto] lg:grid-cols-3 lg:grid-row-none xl:grid-cols-4 lg:gap-4">
+                <span class="text-2xl lg:text-3xl font-semibold order-2 lg:order-1 row-span-1 col-span-1">{(index + 1).toString().padStart(2,'0')}.</span>
+                <h3 class="text-2xl lg:text-3xl font-semibold lg:col-span-1 xl:col-auto order-2 row-span-1 col-span-1" set:html={item.title} />
+                <p class="text-lg lg:text-xl text-boulder-500 lg:col-start-2 lg:row-start-2 xl:col-auto xl:row-auto order-3 row-start-3 row-end-4 col-start-1 col-end-4">{ item.body }</p>
+                <div class="flex lg:justify-end text-end order-1 lg:order-4 col-start-1 col-end-4 lg:col-start-auto lg:col-end-auto">
                   {IconComponent ? (
                       <IconComponent size={size} strokeWidth={strokeWidth} customClasses={customClasses} />
                     ) : (
