Added parallax component

--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -7,7 +7,7 @@
       <div class="col-span-12 border-b mb-10">
         <div class="py-5 flex flex-col justify-between">
           <span class="">04</span>
-          <h2 class="text-4xl font-semibold uppercase">Email me</h2>
+          <h2 class="text-4xl font-semibold">Email me</h2>
         </div>
       </div>
       <div class="col-span-12 lg:col-span-4">
