--- a/src/components/Blog.astro
+++ b/src/components/Blog.astro
@@ -6,7 +6,7 @@
     <div class="grid grid-cols-12 gap-4">
       <div class="col-span-12 border-t">
         <div class="py-5 flex justify-between">
-          <span class="uppercase">(Blog)</span>
+          <span class="uppercase">(Tech & tips)</span>
           <span class="">04</span>
         </div>
         <h2 class="text-4xl font-bold">Blog</h2>
