--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -40,7 +40,7 @@ const services: ServiceItem[] = [
           { services.map((item, index) => {
             const IconComponent = iconMap[item.icon] || null;
             return (
-            <div class="py-14 border-b first:border-t">
+            <div class="py-14 border-b first:border-t hover:bg-boulder-50 transition-colors duration-300 ease-in-out">
               <div class="grid grid-cols-[1fr_5fr_2fr] grid-rows-[auto_auto_auto] lg:grid-cols-3 lg:grid-row-none xl:grid-cols-4 lg:gap-4">
                 <span class="text-2xl lg:text-3xl font-semibold order-2 lg:order-1 row-span-1 col-span-1">{(index + 1).toString().padStart(2,'0')}.</span>
                 <h3 class="text-2xl lg:text-3xl font-semibold lg:col-span-1 xl:col-auto order-2 row-span-1 col-span-1" set:html={item.title} />
