Added contact image

--- a/src/components/ParallaxImage.astro
+++ b/src/components/ParallaxImage.astro
@@ -18,13 +18,14 @@ const {
   scale = 1.2
 } = Astro.props;
 ---
-
+<div class="mx-8">
 <div class:list={["parallax-container", className]}>
   <img 
     src={src} 
     alt={alt}
     class="parallax-img"
   />
+</div>
 </div>
 
 <script>
