--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,6 +4,7 @@ import Footer from '../components/Footer.astro';
 import Header from '../components/Header.astro';
 import AboutComponent from '../components/About.astro';
 import Mission from '../components/Mission.astro';
+import Title from '../components/Title.astro';
 import ParallaxImage from '../components/ParallaxImage.astro';
 import catWithLaptop from '../assets/images/cat-with-laptop.jpg';
 
@@ -12,7 +13,8 @@ import catWithLaptop from '../assets/images/cat-with-laptop.jpg';
 
 <Layout title="Welcome to Piergorelli.com">
 	<Header textColor="black" headerClasses="bg-white" menuColor="#000000"/>
-	<main class="mx-8">
+	<main>
+		<Title title="About me" />
 		<ParallaxImage
 			src={catWithLaptop.src}
 			alt="About me"
