--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -3,15 +3,20 @@ import Layout from '../layouts/Layout.astro';
 import Footer from '../components/Footer.astro';
 import Header from '../components/Header.astro';
 import ContactForm from '../components/ContactForm.astro';
-import { Image } from 'astro:assets';
-import arrowDownRightWhite from '../assets/images/arrow-down-right-white.svg';
+import TextWithImage from '../components/TextWithImage.astro';
+import Title from '../components/Title.astro';
+import assaut from '../assets/images/assaut-2.jpg';
 
 ---
 
 
 <Layout title="Contact">
 	<Header textColor="black" headerClasses="bg-white" menuColor="#000000"/>
-	<main class="h-screen">
+	<main>
+		<Title title="Let's talk" />
+		<TextWithImage
+			image={assaut.src}
+		/>
 		<ContactForm />
 	</main>
   <Footer />
