--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,7 @@
 <section class="bg-[#13151a] mt-48 px-16">
   <div class="grid grid-cols-12 gap-4 h-full">
-    <div class="col-span-6 border-b border-white h-full py-24 flex justify-center">
-      <span class="text-white text-[20vw] font-black font-display">PG</span>
+    <div class="col-span-6 border-b border-white h-full py-24 flex justify-start">
+      <span class="text-white text-[20vw] font-black font-display">G</span>
     </div>
     <div class="col-span-6 py-24">
       <span class="text-white">Contact</span>
