--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -11,7 +11,7 @@ import thinkBig from '../assets/images/think-big-scaled.jpg';
           <span class="">01</span>
         </div>
         <div class="mt-auto text-xl lg:text-2xl mb-12">
-          <h2 class="text-4xl font-extrabold mb-12">About me</h2>
+          <h2 class="text-4xl font-display font-extrabold mb-12">About me</h2>
           <p class="indent-14 leading-normal">
             My journey on the web began when brutalism was the dominant style and HTML tables were the only tool for organizing layouts. Over the years, I turned the necessity of writing code into an art form, exploring that fine line between development and design. I learned the rules only to discover when to break them, finding in minimalism and attention to detail the perfect balance between functionality and aesthetics.
           </p>  
