--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -6,8 +6,8 @@
     <div class="grid grid-cols-12 gap-4">
       <div class="col-span-12 border-b mb-10">
         <div class="py-5 flex flex-col justify-between">
-          <span class="">04</span>
-          <h2 class="text-4xl font-semibold">Email me</h2>
+          <span class="">02</span>
+          <h2 class="text-4xl font-display font-bold">Email me</h2>
         </div>
       </div>
       <div class="col-span-12 lg:col-span-4">
