--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,9 +1,12 @@
-<section class="bg-[#13151a] mt-48 px-16">
-  <div class="grid grid-cols-12 gap-4 h-full">
-    <div class="col-span-6 border-b border-white h-full py-24 flex justify-start">
-      <span class="text-white text-[20vw] font-black font-display">G</span>
+<section class="bg-[#13151a] mt-48 px-8">
+  <div class="grid grid-cols-12 h-full">
+    <div class="col-span-6 border-white border-b h-full py-12 flex justify-start">
+      <span class="text-white text-[20vw] font-extrabold font-display leading-none">G</span>
     </div>
-    <div class="col-span-6 py-24">
+    <div class="col-span-3 border-white border-b border-s border-e py-12">
+      <span class="text-white">Contact</span>
+    </div>
+    <div class="col-span-3 border-white border-b py-12">
       <span class="text-white">Contact</span>
     </div>
   </div>
