--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -12,7 +12,7 @@ import catWithLaptop from '../assets/images/cat-with-laptop.jpg';
 
 
 <Layout title="Welcome to Piergorelli.com">
-	<Header textColor="black" headerClasses="bg-white" menuColor="#000000"/>
+	<Header textColor="black" headerClasses="" menuColor="#000000"/>
 	<main>
 		<Title title="Blog" />
 		<ParallaxImage
