--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -11,7 +11,7 @@ import assaut from '../assets/images/assaut-2.jpg';
 
 
 <Layout title="Contact">
-	<Header textColor="black" headerClasses="bg-white" menuColor="#000000"/>
+	<Header textColor="black" headerClasses="" menuColor="#000000"/>
 	<main>
 		<Title title="Let's talk" />
 		<TextWithImage
