--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Hero from '../components/Hero.astro';
 
 
 <Layout title="Welcome to Piergorelli.com">
-	<Header textColor="white" headerClasses="opacity-1 bg-[#13151a]" backgroundColor="bg-gray-900" menuColor="#ffffff"/>
+	<Header textColor="white" headerClasses="opacity-1" backgroundColor="bg-gray-900" menuColor="#ffffff"/>
 	<main>
 		<Hero/>
     <About/>
