--- a/src/components/Blog.astro
+++ b/src/components/Blog.astro
@@ -9,7 +9,7 @@
           <span class="uppercase">(Tech & tips)</span>
           <span class="">04</span>
         </div>
-        <h2 class="text-4xl font-display font-bold">Blog</h2>
+        <h2 class="text-3xl lg:text-4xl font-display font-bold">Blog</h2>
       </div>
     </div>
   </div>
