--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -7,11 +7,11 @@
       <div class="col-span-12 border-b mb-10">
         <div class="py-5 flex flex-col justify-between">
           <span class="">02</span>
-          <h2 class="text-4xl font-display font-bold">Email me</h2>
+          <h2 class="text-3xl lg:text-4xl font-display font-bold">Email me</h2>
         </div>
       </div>
       <div class="col-span-12 lg:col-span-4">
-        <span class="text-2xl">
+        <span class="text-xl lg:text-2xl">
           Whether you want to discuss a project, share ideas, or just say hello, I’m here to connect. Fill out the form below, and let’s create something amazing together.
         </span>
       </div>
@@ -19,18 +19,18 @@
         <div class="flex flex-col">
           <form method="POST" name="contact" data-netlify="true">
             <div class="flex flex-col mb-8">
-              <label for="name" class="text-2xl">Name:</label>
-              <input type="text" id="name" name="name" class="text-2xl border border-gray-300 p-2 mt-2 rounded-lg py-4 px-6" required>
+              <label for="name" class="text-xl lg:text-2xl">Name:</label>
+              <input type="text" id="name" name="name" class="text-xl lg:text-2xl border border-gray-300 p-2 mt-2 rounded-lg py-4 px-6" required>
             </div>
             <div class="flex flex-col mb-8">
-              <label for="email" class="text-2xl">Email:</label>
-              <input type="email" id="email" name="email" class="text-2xl border border-gray-300 p-2 mt-2 rounded-lg  py-4 px-6" required>
+              <label for="email" class="text-xl lg:text-2xl">Email:</label>
+              <input type="email" id="email" name="email" class="text-xl lg:text-2xl border border-gray-300 p-2 mt-2 rounded-lg  py-4 px-6" required>
             </div>
             <div class="flex flex-col mb-8">
-              <label for="message" class="text-2xl">Message:</label>
-              <textarea id="message" name="message" class="text-2xl border border-gray-300 p-2 mt-2 rounded-lg py-4 px-6" required></textarea>
+              <label for="message" class="text-xl lg:text-2xl">Message:</label>
+              <textarea id="message" name="message" class="text-xl lg:text-2xl border border-gray-300 p-2 mt-2 rounded-lg py-4 px-6" required></textarea>
             </div>
-            <button type="submit" class="rounded-full px-10 border border-black w-max text-2xl py-4 uppercase font-semibold">Send</button>
+            <button type="submit" class="rounded-full px-10 border border-black w-max text-xl lg:text-2xl py-4 uppercase font-semibold">Send</button>
           </form>
         </div>
       </div>
