--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -7,11 +7,17 @@ import Mission from '../components/Mission.astro';
 import ParallaxImage from '../components/ParallaxImage.astro';
 import Title from '../components/Title.astro';
 import catWithLaptop from '../assets/images/cat-with-laptop.jpg';
+import SiteData from "../constants/siteData.json";
 
 ---
 
 
-<Layout title="Welcome to Piergorelli.com">
+<Layout 
+seo={{
+	title: SiteData.pages.blog.title,
+	description: SiteData.default.description
+}}
+>
 	<Header textColor="black" headerClasses="" menuColor="#000000"/>
 	<main>
 		<Title title="Blog" />
