Added footer icons

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,10 +1,13 @@
+---
+import Social from './Social.astro';
+---
 <section class="bg-[#13151a] mt-48 px-8">
   <div class="grid grid-cols-12 h-full">
     <div class="col-span-12 lg:col-span-6 border-white border-b h-full py-12 flex justify-start">
       <span class="text-white text-[20vw] font-extrabold font-display leading-none">G</span>
     </div>
     <div class="col-span-6 lg:col-span-3 border-white border-b lg:border-s lg:border-e py-12 px-8 flex flex-col justify-center">
-      <span class="text-white">Contact</span>
+      <span class="text-white"><Social /></span>
     </div>
     <div class="col-span-6 lg:col-span-3 border-white border-b py-12 px-8 flex flex-col justify-center">
       <span class="text-white">Contact</span>
