--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,5 @@
 ---
+import FooterMenu from './FooterMenu.astro';
 import Social from './Social.astro';
 ---
 <section class="bg-[#13151a] mt-48 px-8">
@@ -6,11 +7,11 @@ import Social from './Social.astro';
     <div class="col-span-12 lg:col-span-6 border-white border-b h-full py-12 flex justify-start">
       <span class="text-white text-[20vw] font-extrabold font-display leading-none">G</span>
     </div>
-    <div class="col-span-6 lg:col-span-3 border-white border-b lg:border-s lg:border-e py-12 px-8 flex flex-col justify-center">
+    <div class="col-span-6 lg:col-span-3 border-white border-b lg:border-s lg:border-e py-12 lg:px-8 flex flex-col justify-center">
       <span class="text-white"><Social /></span>
     </div>
-    <div class="col-span-6 lg:col-span-3 border-white border-b py-12 px-8 flex flex-col justify-center">
-      <span class="text-white">Contact</span>
+    <div class="col-span-6 lg:col-span-3 border-white border-b py-12 lg:px-8 flex flex-col justify-center">
+      <span class="text-white"><FooterMenu /></span>
     </div>
     <div class="col-span-12 py-12 flex justify-center text-xl lg:text-2xl">
       <span class="text-white">© 2024. All rights reserved.</span>
