--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import Mission from '../components/Mission.astro';
 import Services from '../components/Services.astro';
 import Hero from '../components/Hero.astro';
 import SiteData from "../constants/siteData.json";
+import LatestPost from '../components/LatestPost.astro';
 
 ---
 
