--- a/src/components/Blog.astro
+++ b/src/components/Blog.astro
@@ -1,6 +1,7 @@
 ---
-
+import LatestPost from "./LatestPost.astro";
 ---
+
 <section class="w-full bg-white pt-28 lg:pt-48">
   <div class="container mx-auto">
     <div class="grid grid-cols-12 gap-4">
@@ -10,7 +11,9 @@
           <span class="">04</span>
         </div>
         <h2 class="text-3xl lg:text-4xl font-display font-bold">Blog</h2>
+        <LatestPost />
       </div>
     </div>
   </div>
+ 
 </section>
