--- a/src/components/LatestPost.astro
+++ b/src/components/LatestPost.astro
@@ -17,7 +17,7 @@ const recentPosts = allBlogPosts
         <div class="relative group aspect-[4/3] overflow-hidden mb-5">
           <Image src={post.data.cover} alt={post.data.alt} class="aspect-[4/3] object-cover mb-5 transform transition-transform duration-500 group-hover:scale-125"/>
         </div>
-        <a href={"/blog/" + post.slug}><h3 class="text-xl lg:text-2xl">{post.data.title}</h3></a>
+        <a href={"/blog/" + post.slug}><h3 class="text-xl lg:text-2xl text-boulder-900">{post.data.title}</h3></a>
         </div>
        
       ))
