--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -19,7 +19,7 @@ import thinkBig from '../assets/images/think-big-scaled.jpg';
             <i>Creativity lies in making geometry feel like art</i>.
           </p>
         </div>
-        <a href="/about" class="rounded-full px-10 border border-black w-max text-base py-4 uppercase font-semibold">More about me</a>
+        <a href="/about" class="btn rounded-full px-10 border border-black w-max text-base py-4 uppercase font-semibold"><span><span>More about me</span></span></a>
       </div>
       <div class="col-span-12 lg:col-span-4 lg:col-end-13">
         <Image src={thinkBig} alt="About me"/>
@@ -27,3 +27,75 @@ import thinkBig from '../assets/images/think-big-scaled.jpg';
     </div>
   </div>
 </section>
+<style>
+ .btn {
+    pointer-events: auto;
+	  cursor: pointer;
+	  background: #000;
+    color: #fff;
+	  padding: 1.5rem 3rem;
+	  margin: 0;
+	  font-family: inherit;
+	  font-size: inherit;
+	  position: relative;
+	  display: inline-block;
+    border-radius: 9999px;
+    overflow: hidden;
+  }
+
+  .btn::before,
+  .btn::after {
+	  position: absolute;
+	  top: 0;
+	  left: 0;
+	  width: 100%;
+	  height: 100%;
+  }
+
+.btn span {
+  display: block;
+	position: relative;
+}
+
+.btn > span {
+	overflow: hidden;
+}
+
+.btn > span > span {
+	overflow: hidden;
+	mix-blend-mode: difference;
+}
+
+.btn:hover > span > span {
+	animation: MoveUpInitial 0.2s forwards, MoveUpEnd 0.2s forwards 0.2s;
+}
+
+@keyframes MoveUpInitial {
+	to {
+		transform: translate3d(0,-105%,0);
+	}
+}
+
+@keyframes MoveUpEnd {
+	from {
+		transform: translate3d(0,100%,0);
+	}
+	to {
+		transform: translate3d(0,0,0);
+	}
+}
+
+.btn::before {
+	content: '';
+	background: #fff;
+	transition: transform 0.3s cubic-bezier(0.7, 0, 0.2, 1);
+	transform-origin: 100% 50%;
+  border-radius: 9999px;
+}
+
+.btn:hover::before {
+	transform: scale3d(0,1,1);
+	transform-origin: 0% 50%;
+  border-radius: 9999px;
+}
+</style>
