--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -30,7 +30,7 @@
               <label for="message" class="text-xl lg:text-2xl">Message:</label>
               <textarea id="message" name="message" class="text-xl lg:text-2xl border border-gray-300 p-2 mt-2 rounded-lg py-4 px-6" required></textarea>
             </div>
-            <button type="submit" class="rounded-full px-10 border border-black w-max text-xl lg:text-2xl py-4 uppercase font-semibold">Send</button>
+            <button type="submit" class="btn rounded-full px-10 border border-black w-max text-xl lg:text-2xl py-4 uppercase font-semibold"><span><span>Send</span></span></button>
           </form>
         </div>
       </div>
