--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -20,14 +20,8 @@ seo={{
 >
 	<Header textColor="black" headerClasses="" menuColor="#000000"/>
 	<main>
-		<Title title="Blog" />
-		<ParallaxImage
-			src={catWithLaptop.src}
-			alt="About me"
-			class="w-100 h-[46vw] object-cover"
-		/>
-		<AboutComponent/>
-    <Mission/>
+		<Title title="Blog" border="true" />
+		
 	</main>
   <Footer />
 </Layout>
