--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ seo={{
   description: SiteData.default.description
 }}
 >
-	<Header textColor="white" headerClasses="opacity-1" backgroundColor="bg-gray-900" menuColor="#ffffff"/>
+	<Header textColor="white" headerClasses="opacity-1" backgroundColor="bg-boulder-950" menuColor="#ffffff"/>
 	<main>
 		<Hero/>
     <About/>
