--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -4,7 +4,7 @@ import { Image } from 'astro:assets';
 import arrowDownRightWhite from '../assets/images/arrow-down-right-white.svg';
 ---
 
-<section class="flex flex-col justify-end main overflow-hidden bg-[#13151a]">
+<section class="flex flex-col justify-end main overflow-hidden bg-boulder-950">
   <div class="container mx-auto h-[50vh] lg:h-dvh flex flex-col justify-end relative border-white pb-16">
     <div id="paddle-left" class="absolute left-0 top-0 w-2 bg-white opacity-0"></div>
     <div id="paddle-right" class="absolute right-0 top-0 w-2 bg-white" ></div>
