--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -4,13 +4,15 @@ import * as AstroFeather from 'astro-feather'
 const networks = [
   {
     name: 'GitHub',
-    url: '',
+    url: 'https://github.com/lupin72',
     icon: 'GithubIcon',
+    target: '_blank',
   },
   {
     name: 'LinkedIn',
-    url: '',
+    url: 'https://www.linkedin.com/in/piergorelli/',
     icon: 'LinkedinIcon',
+    target: '_blank',
   },
 ];
 ---
@@ -21,6 +23,7 @@ const networks = [
     <a href
       ={network.url}
       class="text-white text-xl flex items-start gap-2 mb-5 font-semibold"
+      target={network.target}
       title={network.name}
     >
       {Icon && <Icon size={24} />}
