--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -49,6 +49,75 @@ const pages = [
         creator: SiteData.default.twitter.creator
       }}
     />
+		<style is:global>
+			.btn {
+				 pointer-events: auto;
+				 cursor: pointer;
+				 background: #000;
+				 color: #fff;
+				 margin: 0;
+				 position: relative;
+				 display: inline-block;
+				 border-radius: 9999px;
+				 overflow: hidden;
+			 }
+		 
+			 .btn::before,
+			 .btn::after {
+				 position: absolute;
+				 top: 0;
+				 left: 0;
+				 width: 100%;
+				 height: 100%;
+			 }
+		 
+		 .btn span {
+			 display: block;
+			 position: relative;
+		 }
+		 
+		 .btn > span {
+			 overflow: hidden;
+		 }
+		 
+		 .btn > span > span {
+			 overflow: hidden;
+			 mix-blend-mode: difference;
+		 }
+		 
+		 .btn:hover > span > span {
+			 animation: MoveUpInitial 0.2s forwards, MoveUpEnd 0.2s forwards 0.2s;
+		 }
+		 
+		 @keyframes MoveUpInitial {
+			 to {
+				 transform: translate3d(0,-105%,0);
+			 }
+		 }
+		 
+		 @keyframes MoveUpEnd {
+			 from {
+				 transform: translate3d(0,100%,0);
+			 }
+			 to {
+				 transform: translate3d(0,0,0);
+			 }
+		 }
+		 
+		 .btn::before {
+			 content: '';
+			 background: #fff;
+			 transition: transform 0.3s cubic-bezier(0.7, 0, 0.2, 1);
+			 transform-origin: 100% 50%;
+			 border-radius: 9999px;
+		 }
+		 
+		 .btn:hover::before {
+			 transform: scale3d(0,1,1);
+			 transform-origin: 0% 50%;
+			 border-radius: 9999px;
+		 }
+		 </style>
 	</head>
 	<body>
 		<slot />
