--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -23,7 +23,7 @@ import SiteData from "../constants/siteData.json";
 		<TextWithImage
 			image={assaut.src}
 		/>
-		<ContactForm />
+		<ContactForm subtitle="02" />
 	</main>
   <Footer />
 </Layout>
