--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -25,7 +25,7 @@ seo={{
 					alt="Services"
 					class="w-100 h-[46vw] object-cover"
 				/>
-			<ServicesComponent size={58} strokeWidth={0.5} customClasses='text-boulder-500'/>
+			<ServicesComponent size={58} strokeWidth={0.5} customClasses='text-boulder-500' subtitle="01"/>
 	</main>
   <Footer />
 </Layout>
