Fixed contact form

--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -22,7 +22,7 @@ const networks = [
     return (
     <a href
       ={network.url}
-      class="text-white text-xl flex items-start gap-2 mb-5 font-semibold"
+      class="text-white lg:text-xl flex items-center lg:items-start gap-2 mb-5 font-semibold"
       target={network.target}
       title={network.name}
     >
