--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -31,7 +31,7 @@ const { subtitle = ""} = Astro.props;
               <textarea id="message" name="message" class="text-xl lg:text-2xl border border-gray-300 p-2 mt-2 rounded-lg py-4 px-6" required></textarea>
             </div>
             <div class="flex mb-14 items-center">
-              <input type="checkbox" id="terms" name="terms" class="mr-4 w-8 h-8 rounded border-gray-300 accent-boulder-950" required>
+              <input type="checkbox" id="terms" name="terms" class="mr-4 w-6 h-6 lg:w-8 lg:h-8 rounded border-gray-300 accent-boulder-950" required>
               <label for="terms" class="text-xl lg:text-2xl">I agree to the terms and conditions</label>
             </div>
             <button type="submit" class="btn rounded-full px-10 border border-black w-max text-xl lg:text-2xl py-4 uppercase font-semibold"><span><span>Send</span></span></button>
