--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,7 +13,7 @@ import Social from './Social.astro';
     <div class="col-span-6 lg:col-span-3 border-white border-b py-12 lg:px-8 flex flex-col justify-center">
       <span class="text-white"><FooterMenu /></span>
     </div>
-    <div class="col-span-12 py-12 flex justify-center text-xl lg:text-2xl">
+    <div class="col-span-12 py-12 flex justify-center text-lg lg:text-2xl">
       <span class="text-white">© 2024. All rights reserved.</span>
     </div>
   </div>
