--- a/src/components/FooterMenu.astro
+++ b/src/components/FooterMenu.astro
@@ -17,7 +17,7 @@ const pages = [
     return (
     <a href
       ={page.url}
-      class="text-white text-xl flex items-start gap-2 mb-5 font-semibold"
+      class="text-white lg:text-xl flex items-start gap-2 mb-5 font-semibold"
       title={page.name}
     >
       {page.name}
