Added made in Valencia

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,6 @@
 ---
 import FooterMenu from './FooterMenu.astro';
+import { HeartIcon  } from 'astro-feather';
 import Social from './Social.astro';
 ---
 <section class="bg-[#13151a] mt-48 px-8">
@@ -13,8 +14,13 @@ import Social from './Social.astro';
     <div class="col-span-6 lg:col-span-3 border-white border-b py-12 lg:px-8 flex flex-col justify-center">
       <span class="text-white"><FooterMenu /></span>
     </div>
-    <div class="col-span-12 py-12 flex justify-center text-lg lg:text-2xl">
-      <span class="text-white">© 2024. All rights reserved.</span>
+    <div class="col-span-12 flex flex-col justify-center items-center py-12">
+      <div class="flex justify-center text-lg lg:text-2xl">
+        <span class="text-white">© 2024. All rights reserved.</span>
+      </div>
+      <div class="mt-4 flex justify-center text-lg">
+        <span class="flex items-center text-white">Made with <HeartIcon customClasses="fill-red-600 text-red-600 mx-3" /> in Valencia.</span>
+      </div>
     </div>
   </div>
 </section>
