--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ seo={{
     <About/>
     <Mission/>
     <Services size={58} strokeWidth={0.5} customClasses='text-boulder-500' subtitle="03"/>
-    <Blog/>
+    <Blog limit="3"/>
 	</main>
   <Footer />
 </Layout>
