--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -2,12 +2,9 @@
 import Layout from '../layouts/Layout.astro';
 import Footer from '../components/Footer.astro';
 import Header from '../components/Header.astro';
-import AboutComponent from '../components/About.astro';
-import Mission from '../components/Mission.astro';
-import ParallaxImage from '../components/ParallaxImage.astro';
 import Title from '../components/Title.astro';
-import catWithLaptop from '../assets/images/cat-with-laptop.jpg';
 import SiteData from "../constants/siteData.json";
+import LatestPost from '../components/LatestPost.astro';
 
 ---
 
@@ -21,7 +18,9 @@ seo={{
 	<Header textColor="black" headerClasses="" menuColor="#000000"/>
 	<main>
 		<Title title="Blog" border="true" />
-		
+		<div class="mx-8 mt-24">
+			<LatestPost/>
+		</div>
 	</main>
   <Footer />
 </Layout>
